--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,9 +11,9 @@
     justify-content: center;
 }
 
-.navbar {
+#navbar {
     position: fixed;
-    top: 30px;
+    top: 45px;
     width: 85vw;
     height: 75px;
     line-height: 75px;
@@ -28,7 +28,7 @@
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
+    display: none;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
@@ -46,7 +46,7 @@ a:-webkit-any-link {
 .navbar-item:hover,
 .navbar-active-item {
     text-decoration: underline;
-    text-underline-offset: 30px;
+    text-underline-offset: 10px;
     text-decoration-thickness: 3px;
     text-decoration-color: white;
 }
@@ -57,4 +57,40 @@ a:-webkit-any-link {
     font-family: 'Cinzel';
     font-weight: normal;
     font-style: normal;
+}
+
+.arrow {
+    position: absolute;
+    border: solid white;
+    border-width: 0 6px 6px 0;
+    display: inline-block;
+    padding: 12px;
+    z-index: 2;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+
+/* Responsive for smaller screens */
+
+@media screen and (max-width: 1000px) {
+    #navbar {
+        display: none;
+        padding-top: 5vh;
+        flex-direction: column;
+        background-color: rgba(0, 0, 0, 0.75);
+        height: 85vh;
+        width: 600px;
+        background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 35%, rgba(0, 0, 0, 0.75) 65%, rgba(0, 0, 0, 0) 100%);
+    }
 }
