--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,10 @@
     width: 100vw;
 }
 
-.hidden {
-  opacity: 0;
-}
-
 body {
     padding: 0;
     margin: 0;
-    background: rgb(8, 8, 8);
+    background: black;
     color: white;
 }
 
@@ -31,28 +27,15 @@ p {
     margin-left: 190px;
 }
 
-.button-container {
-  position: absolute;
-  width: 100vw;  
-  height: 100vh;  
-  display: flex;  
-  justify-content: center;  
-  align-items: center;  
-}
 
-#start-button {
-    display: block;
-    font-size: 15px;
-    border: 1px solid white;
-    color: white;
-    background-color: black;
-    padding: 15px 35px;
-    letter-spacing: 20px;
-    cursor: pointer;
-    z-index: 1;
-}
+/* Loading screen style */
 
-#start-button:hover {
-  font-weight: bold;
-  border: 2px solid white;
+.loading {
+    position: fixed;
+    top: 0;
+    left: -90px;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index: 9999;
 }
