--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,36 +6,75 @@
     font-display: swap;
 }
 
-.navbar-container {
-    display: flex;
-    justify-content: center;
+@font-face {
+    font-family: 'BebasNeue';
+    src: url('../../Fonts/BebasNeue-Regular.woff') format('woff'), url('../../Fonts/BebasNeue-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
-.hidden {
+@font-face {
+    font-family: 'BebasNeue-Light';
+    src: url('../../Fonts/BebasNeue-Light.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+.navbar-container {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
     display: none;
+    justify-content: right;
+}
+
+.shown {
+    display: flex;
+    animation: fadeIn 10s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 #navbar {
     position: fixed;
-    top: 45px;
-    width: 85vw;
+    top: 30px;
+    width: 60vw;
     height: 75px;
     line-height: 75px;
     padding: 5px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 125px;
+    padding-right: 50px;
     z-index: 1;
-    /* Gradient 
-    background: linear-gradient(90deg, rgba(25, 25, 25, 0.5) 0%, rgba(13, 13, 13, 0.5) 73%, rgba(8, 8, 8, 0.5) 100%);
-    */
+    background: linear-gradient(90deg, rgba(13, 15, 20, 0.9) 0%, rgba(16, 18, 20, 0.5) 73%, rgba(8, 8, 8, 0.5) 100%);
     /* Fit contents to width */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: none;
+    display: flex;
+    justify-content: space-between;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
+}
+
+hr {
+    position: absolute;
+    top: 63px;
+    width: 26vw;
+    left: 6vw;
+    z-index: 2;
+    border-color: rgb(90, 90, 90);
 }
 
 a:-webkit-any-link {
@@ -45,45 +84,41 @@ a:-webkit-any-link {
 .navbar-item {
     background: none;
     border: none;
+    transition: all .2s ease-in-out;
 }
 
 .navbar-item:hover,
 .navbar-active-item {
-    text-decoration: underline;
-    text-underline-offset: 10px;
-    text-decoration-thickness: 3px;
-    text-decoration-color: white;
+    cursor: pointer;
+    border-bottom: 3px solid white;
+    transform: scale(1.1);
 }
 
 .nav-Font {
     color: rgb(238, 238, 238);
     font-size: 20px;
-    font-family: 'Cinzel';
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'BebasNeue-Light';
 }
 
-.arrow {
+.heavy {
+    font-size: 20px;
+    font-family: 'BebasNeue';
+    padding-right: 10px;
+}
+
+.starburst {
     position: absolute;
-    border: solid white;
-    border-width: 0 6px 6px 0;
-    display: inline-block;
-    padding: 12px;
-    z-index: 2;
-    margin-top: 20px;
-    cursor: pointer;
+    z-index: 1;
+    top: 50px;
+    left: 50px;
+    width: 45px;
+    height: auto;
+    transition: all .2s ease-in-out;
 }
 
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+.starburst:hover {
+    transform: scale(1.2);
 }
-
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-}
-
 
 /* Responsive for smaller screens */
 
