added bg music with button toggling

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -89,7 +89,7 @@ a:-webkit-any-link {
 
 .navbar-item:hover,
 .navbar-active-item {
-    cursor: pointer;
+    cursor: crosshair;
     border-bottom: 3px solid white;
     transform: scale(1.1);
 }
