--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ p {
 .loading {
     position: fixed;
     top: 0;
-    left: -90px;
+    left: 13vw;
     width: 100%;
     height: 100%;
     background: #000;
