--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -7,7 +7,7 @@
 }
 
 .landingPage {
-    width: 100vw;
+    width: 135vw;
     height: 100vh;
     background-color: black;
     display: flex;
@@ -48,7 +48,29 @@
 }
 
 .landingPage_button:hover {
-    cursor: pointer;
+    cursor: crosshair;
     border: 0.2rem solid white;
     font-weight: bold;
+}
+
+/* Sound UI */
+.sound-player-container {
+    position: absolute;
+    bottom: -48vh;
+    left: -30vw;
+}
+
+.sound-icon {
+    filter: invert(100%);
+    border: 2px solid black;
+    padding: 10px;
+    background-color: white;
+    width: 30px;
+    border-radius: 50%;
+    transition: all .2s ease-in-out;
+}
+
+.sound-icon:hover {
+    transform: scale(1.1);
+    cursor: crosshair;
 }
