--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -63,7 +63,7 @@
 .sound-icon {
     filter: invert(100%);
     border: 2px solid black;
-    padding: 10px;
+    padding: 5px;
     background-color: white;
     width: 30px;
     border-radius: 50%;
@@ -73,4 +73,11 @@
 .sound-icon:hover {
     transform: scale(1.1);
     cursor: crosshair;
+}
+
+@media screen and (max-width: 1220px) {
+    .sound-player-container {
+        bottom: -48vh;
+        left: -48vw;
+    }
 }
