--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ body {
     overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 p {
     font-family: 'Roboto', sans-serif;
     font-size: 6px;
