--- a/src/Components/Content/02-earth/Intro.css
+++ b/src/Components/Content/02-earth/Intro.css
@@ -56,7 +56,7 @@
     height: 175vh;
     top: 0;
     right: 0;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgb(2, 2, 2) 100%);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(2, 2, 2) 100%);
     padding-top: 25vh;
     justify-content: left;
     text-align: left;
@@ -67,6 +67,14 @@
     opacity: 1;
     animation: fadeIn 10s;
     animation-fill-mode: forwards;
+}
+
+.header-fadeOut {
+    position: fixed;
+    width: 45vw;
+    height: 25vh;
+    background: linear-gradient(black 60%, transparent 100%);
+    top: 0;
 }
 
 .project-overview {
