--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ p {
 .loading {
     position: fixed;
     top: 0;
-    left: 13vw;
+    left: 17vw;
     width: 100%;
     height: 100%;
     background: #000;
@@ -49,11 +49,15 @@ p {
 /* Mobile display */
 @media screen and (max-width: 1220px) {
     .App {
+        align-items: center;
+        justify-content: center;
+        text-align: center;
         width: 100vw;
         height: 100vh;
     }
 
     .loading {
-        left: -22vw;
+        left: -15vw;
+        right: 0;
     }
 }
