--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -104,7 +104,7 @@ a:-webkit-any-link {
 
 .navbar-item:hover,
 .navbar-active-item {
-    cursor: crosshair;
+    cursor: pointer;
     border-bottom: 3px solid white;
     transform: scale(1.1);
 }
