--- a/src/Components/Content/Projects/Intro.css
+++ b/src/Components/Content/Projects/Intro.css
@@ -147,7 +147,45 @@
     .intro {
         width: 90vw;
         height: 90vh;
-        top: 100vh;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgb(2, 2, 2) 100%);
+        top: 80vh;
+        background: linear-gradient(0deg, rgba(0,0,0,1) 75%, rgba(0,0,0,0) 100%);
     }
+
+    .intro {
+        width: 100vw;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+
+    .header-fadeOut {
+        width: 100vw;
+        height: 20vh;
+    }
+
+    .project-overview {
+        width: 100vw;
+        justify-content: space-around;
+        text-align: center;
+        align-items: center;
+    }
+
+    .project-description {
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        background: black;
+    }
+
+    .project-description-title {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .project-description-text {
+        display: inline-block;
+        text-align: center;
+        width: 75%;
+    }
+
 }
